--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,75 @@
-body {
-    height: 100vh;
-    display: flex;
-    justify-content:center;
-    align-items:center;
+@font-face {
+    font-family: gameria;
+    src: url('../fonts/GAMERIA.ttf');
 }
 
-button {
-    margin-top: 20px;
-    padding:7px 12px 7px 12px;
-    background-color: rgba(0, 0, 0, 0.8);
-    color:white;
-    border:0px;
-}
-
-#formJogador , #divLabel, #divJogo{
-    display: flex;
-    justify-content:center;
-    width: 300px;
-    height:250px;
-    border-radius: 7px;
-    padding:10px;
-}
-
-#formJogador  > div {
+header {
     display:flex;
-    align-items:center;
-
+    justify-content:center;
 }
 
-#formJogador > div > form > div > div{
-    display:grid;
-    grid-template-rows: 1fr 1fr;
-    grid-auto-columns: 200px;
+header > form > div{
+    display: flex;
+    flex-direction:row;
+    justify-content:center;
+    gap:10px;
 }
 
-#formJogador > div > form > div > div > input {
-    padding:7px;
+header > form > div > label > div{
+    border:3px solid #ccc;
+    width:5em;
+    text-align: center;
 }
 
-#formJogador > div > form > div {
-    display:grid;
-    gap:20px;
+header > form > div > label > div > p {
+    font-weight: 700;
 }
 
-#divLabel > div > button {
-    margin-top: 20px;
-    padding:7px 12px 7px 12px;
-    background-color: rgba(0, 0, 0, 0.8);
-    color:white;
-    border:0px;
+header > form > div > button{
+    margin-top:20px;
+    background-color: #b366ff;
+    color:#45008a;
+    border:1px solid #b366ff;
+    padding:10px 15px 10px 15px; 
+    font-weight: 700;
+    border-radius:5px;
+}
+
+#jogo {
+    display: flex;
+    justify-content: center;
+}
+
+table {
+    margin-top:10px;
+}
+
+table > tr > td{
+    width: 10em;
+    height: 10em;
+    border:3px solid #8000ff;
+}
+
+table > tr > td > img {
+    width: 9em;
+    height: 9em;
+}
+
+#divJogo{
+    width:100%;
+    text-align: center;
+}
+
+#divJogo > #label{
+    margin-top:30px;
+    font-weight: 200;
+    font-family: gameria;
+}
+
+#tipo_peca_x:checked ~ .div_x {
+    border:3px solid #8000ff;
+}
+
+#tipo_peca_o:checked ~ .div_o {
+    border:3px solid #8000ff;
 }
